--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-cayman
+
+title: XEnsemble: Robust Deep Learning Ensemble against Deception
+description: Identifying, verifying and correcting outlier inputs for deep learning
