--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: XEnsemble: Robust Deep Learning Ensemble against Deception
+title: "XEnsemble: Robust Deep Learning Ensemble against Deception"
 description: Identifying, verifying and correcting outlier inputs for deep learning
 
 
