--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "XEnsemble: <span style='font-size: 30px'>Robust Deep Learning Ensemble against Deception</style>"
-description: “Identifying, verifying and correcting outlier inputs for deep learning”
+title: "XEnsemble: <span style='font-size: 50px'>Robust Deep Learning Ensemble against Deception</style>"
+description: A method identifying, verifying and correcting deception inputs for deep learning
 
 
 theme: jekyll-theme-cayman
