--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: "XEnsemble: <span style='font-size: 45px'>Robust Deep Learning Ensemble against Deception</style>"
 description: A method identifying, verifying and correcting deception inputs for deep learning
+show_downloads: True
 
 
 theme: jekyll-theme-cayman
